set min width on bdoy to prevent crumpling and align username and avatar in nav
relates #26 #3

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,7 @@ body {
   Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
   "Segoe UI Symbol";
   background-color: rgb(250, 250, 250);
+  min-width: 320px;
 }
 
 
